[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/InsideSegmentGenerator.gd" type="Script" id=1]
[ext_resource path="res://Resources/Tilesets/Dungeon.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/SecretTiles.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Objects/Chest.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Tilesets/WallHolder.tscn" type="PackedScene" id=5]

[node name="Segment" type="Node2D"]
script = ExtResource( 1 )

[node name="BottomTiles" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
collision_layer = 5
format = 1
tile_data = PoolIntArray( 3, 64, 0, 4, 63, 0, 5, 63, 0, 6, 64, 0, 65538, 65, 0, 65539, 64, 0, 65540, 64, 0, 65541, 64, 0, 65542, 64, 0, 65543, 65, 0, 131074, 66, 0, 131075, 64, 0, 131076, 64, 0, 131077, 64, 0, 131078, 64, 0, 131079, 66, 0, 196610, 64, 0, 196611, 64, 0, 196612, 64, 0, 196613, 64, 0, 196614, 64, 0, 196615, 64, 0, 262146, 64, 0, 262147, 64, 0, 262148, 64, 0, 262149, 63, 0, 262150, 64, 0, 262151, 64, 0, 327682, 64, 0, 327683, 64, 0, 327684, 61, 0, 327685, 62, 0, 327686, 61, 0, 327687, 64, 0, 393218, 64, 0, 393219, 64, 0, 393220, 62, 0, 393221, 62, 0, 393222, 62, 0, 393223, 64, 0, 458754, 64, 0, 458755, 64, 0, 458756, 61, 0, 458757, 62, 0, 458758, 61, 0, 458759, 64, 0, 524290, 64, 0, 524291, 64, 0, 524292, 64, 0, 524293, 64, 0, 524294, 64, 0, 524295, 64, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TopTiles" type="TileMap" parent="."]
z_index = 5
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
collision_layer = 5
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 17, 0, 2, 8, 0, 7, 6, 0, 8, 18, 0, 9, 4, 0, 65536, 4, 0, 65537, 5, 0, 65544, 3, 0, 65545, 4, 0, 131072, 4, 0, 131073, 5, 0, 131080, 3, 0, 131081, 4, 0, 196608, 4, 0, 196609, 5, 0, 196616, 3, 0, 196617, 4, 0, 262144, 4, 0, 262145, 5, 0, 262152, 3, 0, 262153, 4, 0, 327680, 4, 0, 327681, 5, 0, 327688, 3, 0, 327689, 4, 0, 393216, 4, 0, 393217, 5, 0, 393224, 3, 0, 393225, 4, 0, 458752, 4, 0, 458753, 5, 0, 458760, 3, 0, 458761, 4, 0, 524288, 4, 0, 524289, 5, 0, 524296, 3, 0, 524297, 4, 0, 589824, 4, 0, 589825, 16, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 15, 0, 589833, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="SecretTiles" type="TileMap" parent="." groups=[
"secrets",
]]
z_index = 5
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
collision_layer = 7
collision_mask = 7
format = 1
tile_data = PoolIntArray( 1, 4, 0, 2, 5, 0, 7, 3, 0, 8, 4, 0, 65537, 4, 0, 65538, 16, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 15, 0, 65544, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0 )
script = ExtResource( 3 )

[node name="ConstObjects" type="Node2D" parent="."]

[node name="Chest" parent="ConstObjects" instance=ExtResource( 4 )]
position = Vector2( 361.071, 435.289 )
item = 35

[node name="Chest2" parent="ConstObjects" instance=ExtResource( 4 )]
position = Vector2( 525.997, 435.451 )
item = 26

[node name="Chest3" parent="ConstObjects" instance=ExtResource( 4 )]
position = Vector2( 356.875, 595.367 )
item = 13

[node name="Chest4" parent="ConstObjects" instance=ExtResource( 4 )]
position = Vector2( 523.145, 596.712 )
item = 14

[node name="Walls" type="Node2D" parent="."]
position = Vector2( 680, 200 )

[node name="StaticBody2D" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 0, 0 )
